LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/ACT_ID__c.field-meta.xml
<CustomField>
    <fullName>ACT_ID__c</fullName>
    <description>ACT_ID</description>
    <externalDeveloperName>ACT_ID</externalDeveloperName>
    <label>ACT_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>