LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/CLIENT_AID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_AID__c</fullName>
    <description>CLIENT_AID</description>
    <externalDeveloperName>CLIENT_AID</externalDeveloperName>
    <label>CLIENT_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>