LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/Client_Service_Partner__c.field-meta.xml
<CustomField>
    <fullName>Client_Service_Partner__c</fullName>
    <description>Client_Service_Partner</description>
    <externalDeveloperName>Client_Service_Partner</externalDeveloperName>
    <label>Client_Service_Partner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>