LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/DATE_LOG__c.field-meta.xml
<CustomField>
    <fullName>DATE_LOG__c</fullName>
    <description>DATE_LOG</description>
    <externalDeveloperName>DATE_LOG</externalDeveloperName>
    <label>DATE_LOG</label>
    <type>DateTime</type>
</CustomField>