LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/DESGN_ID__c.field-meta.xml
<CustomField>
    <fullName>DESGN_ID__c</fullName>
    <description>DESGN_ID</description>
    <externalDeveloperName>DESGN_ID</externalDeveloperName>
    <label>DESGN_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>