LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/EMP_AID__c.field-meta.xml
<CustomField>
    <fullName>EMP_AID__c</fullName>
    <description>EMP_AID</description>
    <externalDeveloperName>EMP_AID</externalDeveloperName>
    <label>EMP_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>