LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/FOREX_RATE__c.field-meta.xml
<CustomField>
    <fullName>FOREX_RATE__c</fullName>
    <description>FOREX_RATE</description>
    <externalDeveloperName>FOREX_RATE</externalDeveloperName>
    <label>FOREX_RATE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>