LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/GRADE_AID__c.field-meta.xml
<CustomField>
    <fullName>GRADE_AID__c</fullName>
    <description>GRADE_AID</description>
    <externalDeveloperName>GRADE_AID</externalDeveloperName>
    <label>GRADE_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>