LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/KEY_ACCOUNT_SFID__c.field-meta.xml
<CustomField>
    <fullName>KEY_ACCOUNT_SFID__c</fullName>
    <description>KEY_ACCOUNT_SFID</description>
    <externalDeveloperName>KEY_ACCOUNT_SFID</externalDeveloperName>
    <label>KEY_ACCOUNT_SFID</label>
    <length>18</length>
    <referenceTargetField>Account.Salesforce_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Development Time Cost Spent</relationshipLabel>
    <relationshipName>Business_Development_Time_Cost_Spent1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>