LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/LEAVE_ID__c.field-meta.xml
<CustomField>
    <fullName>LEAVE_ID__c</fullName>
    <description>LEAVE_ID</description>
    <externalDeveloperName>LEAVE_ID</externalDeveloperName>
    <label>LEAVE_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>