LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/MEETINGID__c.field-meta.xml
<CustomField>
    <fullName>MEETINGID__c</fullName>
    <description>MEETINGID</description>
    <externalDeveloperName>MEETINGID</externalDeveloperName>
    <label>MEETINGID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>