LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/NEW_ACT_ID__c.field-meta.xml
<CustomField>
    <fullName>NEW_ACT_ID__c</fullName>
    <description>NEW_ACT_ID</description>
    <externalDeveloperName>NEW_ACT_ID</externalDeveloperName>
    <label>NEW_ACT_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>