LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/PROCESS_ID__c.field-meta.xml
<CustomField>
    <fullName>PROCESS_ID__c</fullName>
    <description>PROCESS_ID</description>
    <externalDeveloperName>PROCESS_ID</externalDeveloperName>
    <label>PROCESS_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>