LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Project_Description</description>
    <externalDeveloperName>Project_Description</externalDeveloperName>
    <label>Project_Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>