LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/PROJECT_NAME__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_NAME__c</fullName>
    <description>PROJECT_NAME</description>
    <externalDeveloperName>PROJECT_NAME</externalDeveloperName>
    <label>Job Name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>