LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/Recurring_Non_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Non_Recurring__c</fullName>
    <description>Recurring__Non_Recurring</description>
    <externalDeveloperName>Recurring__Non_Recurring</externalDeveloperName>
    <label>Recurring__Non_Recurring</label>
    <length>13</length>
    <type>Text</type>
</CustomField>