LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/REJECTION_REMARKS__c.field-meta.xml
<CustomField>
    <fullName>REJECTION_REMARKS__c</fullName>
    <description>REJECTION_REMARKS</description>
    <externalDeveloperName>REJECTION_REMARKS</externalDeveloperName>
    <label>REJECTION_REMARKS</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>