LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/SF_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Client_ID__c</fullName>
    <description>SF_Client_ID</description>
    <externalDeveloperName>SF_CLIENT_ID</externalDeveloperName>
    <label>SF_Client_ID</label>
    <length>20</length>
    <referenceTargetField>Account.Salesforce_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Development Time Cost Spent</relationshipLabel>
    <relationshipName>Business_Development_Time_Cost_Spent2</relationshipName>
    <type>IndirectLookup</type>
</CustomField>