LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/SF_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Job_ID__c</fullName>
    <description>SF_Job_ID</description>
    <externalDeveloperName>SF_Job_ID</externalDeveloperName>
    <label>SF_Job_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>