LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/SF_NewClient_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_NewClient_ID__c</fullName>
    <description>SF_NewClient_ID</description>
    <externalDeveloperName>SF_NEWCLIENT_ID</externalDeveloperName>
    <label>SF_NewClient_ID</label>
    <length>20</length>
    <referenceTargetField>Lead.leadID__c</referenceTargetField>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Business Development Time Cost Spent</relationshipLabel>
    <relationshipName>Business_Development_Time_Cost_Spent</relationshipName>
    <type>IndirectLookup</type>
</CustomField>