LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/SMEG__c.field-meta.xml
<CustomField>
    <fullName>SMEG__c</fullName>
    <description>SMEG</description>
    <externalDeveloperName>SMEG</externalDeveloperName>
    <label>SMEG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>