LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/SR_NO__c.field-meta.xml
<CustomField>
    <fullName>SR_NO__c</fullName>
    <description>SR_NO</description>
    <externalDeveloperName>SR_NO</externalDeveloperName>
    <label>SR_NO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>