LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/STATUS_FLG__c.field-meta.xml
<CustomField>
    <fullName>STATUS_FLG__c</fullName>
    <description>STATUS_FLG</description>
    <externalDeveloperName>STATUS_FLG</externalDeveloperName>
    <label>STATUS_FLG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>