LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/TOTAL_COST__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_COST__c</fullName>
    <description>TOTAL_COST</description>
    <externalDeveloperName>TOTAL_COST</externalDeveloperName>
    <label>Total Cost (INR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>