LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/fields/TS_AID__c.field-meta.xml
<CustomField>
    <fullName>TS_AID__c</fullName>
    <description>TS_AID</description>
    <externalDeveloperName>TS_AID</externalDeveloperName>
    <label>TS_AID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>