LinKreta_POC_Repository/force-app/main/default/objects/SF_TIME_SHEET_DT__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EMP_NAME__c</columns>
    <columns>SF_NewClient_ID__c</columns>
    <columns>SF_Client_ID__c</columns>
    <columns>ACTIVITY_ID__c</columns>
    <columns>DisplayUrl</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SF_NewClient_ID__c</field>
        <operation>notEqual</operation>
        <value>NULL</value>
    </filters>
    <label>All</label>
</ListView>